--- a/article.tex
+++ b/article.tex
@@ -214,7 +214,7 @@ has a generalized solution satisfying the bound
 is well known.
 
 This estimate is arrived at easily if the $k$-th equation of the system is
-multiplied by $u_k$, and, nothing the equality $\divr u = 0$, as well as the
+multiplied by $u_k$, and, noting the equality $\divr u = 0$, as well as the
 initial \eqref{nsibc} and boundary $\eqref{nspbc}$ conditions, the equations are
 all integrated and summed for all $k=1,2,3$.
 
