Add partial derivative from Issue #2

--- a/article.tex
+++ b/article.tex
@@ -114,7 +114,7 @@ equations
     \begin{aligned}
         &\pderiv{u_j}{t} + \sum_{k=1}^{3} u_k \pderiv{u_j}{x_k} = \Delta u_j -
         \pderiv{p}{x_j} + f_j, \quad (t,x) \in \Omega, \qquad j = 1,2,3;\\
-       &\divr u \equiv \sum_{k=1}^{3} = 0,\qquad (t,x) \in \Omega.
+       &\divr u \equiv \sum_{k=1}^{3} \pderiv{u_k}{x_k} = 0,\qquad (t,x) \in \Omega.
     \end{aligned}
     \right.
 \end{equation}
