--- a/article.tex
+++ b/article.tex
@@ -219,7 +219,7 @@ initial \eqref{nsibc} and boundary $\eqref{nspbc}$ conditions, the equations are
 all integrated and summed for all $k=1,2,3$.
 
 In the case when the number of spatial variables is not less than three, the
-bound \eqref{hopest} is insufficient for perturbation theory. In my option,
+bound \eqref{hopest} is insufficient for perturbation theory. In my opinion,
 this fact in particular is one of the most important reasons why the problem
 of the strong solvability of the Navier-Stokes equations is a Millenium Prize
 problem.
